--- a/index.html
+++ b/index.html
@@ -6,30 +6,40 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+
   <title>{{.PageTitle}}</title>
 </head>
 <body>
 
-  {{define "headerHTML"}}
-  <header>
-    {{.header}}
-    <div class="container">
-        <div class="row">
-            <div class="col">
-              <h3>Petit baccalaureat</h3>
-            </div>
-            <div class="col">
-                <button type="button" class="btn btn-primary float-right" id="letter">
-                    Letter <span class="badge badge-light">{{.Letter}}</span>
-                    <span class="sr-only">unread messages</span>
-                  </button>
-            </div>
-          </div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h3>Petit baccalaureat</h3>
+      </div>
+      <div class="col">
+          <button type="button" class="btn btn-primary float-right" id="letter">
+              Letter <span class="badge badge-light">{{.Letter}}</span>
+              <span class="sr-only">unread messages</span>
+            </button>
+      </div>
     </div>
-  </header>
+    <div class="row">
+        <div class="col">
+            <form>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Your answer" aria-label="answer" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button type="button" class="btn btn-primary">Submit</button>
+                    </div>
+                  </div>
+              </form>
+        </div>
+      </div>
+  </div>
   
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
