--- a/game.html
+++ b/game.html
@@ -1,19 +1,31 @@
+{{define "game"}}
 
-
-  <div class="container">
-    <div class="row">
-        <div class="col"></div>
-        <div class="col">
-            <form>
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Your answer" aria-label="answer" aria-describedby="basic-addon2">
-                    <div class="input-group-append">
-                        <button type="button" class="btn btn-primary">Submit</button>
-                    </div>
-                  </div>
-              </form>
-        </div>
-        <div class="col"></div>
-      </div>
+{{template "layout"}}
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h3>Petit baccalaureat</h3>
+    </div>
+    <div class="col">
+        <button type="button" class="btn btn-primary float-right" id="letter">
+            Letter <span class="badge badge-light">{{.Letter}}</span>
+            <span class="sr-only">unread messages</span>
+          </button>
+    </div>
   </div>
+  <div class="row">
+      <div class="col">
+          <form>
+              <div class="input-group mb-3">
+                  <input type="text" class="form-control" placeholder="Your answer" aria-label="answer" aria-describedby="basic-addon2">
+                  <div class="input-group-append">
+                      <button type="button" class="btn btn-primary">Submit</button>
+                  </div>
+                </div>
+            </form>
+      </div>
+    </div>
+</div>
+
+{{end}}
 
