--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+{{define "layout"}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,31 +12,7 @@
 </head>
 <body>
 
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <h3>Petit baccalaureat</h3>
-      </div>
-      <div class="col">
-          <button type="button" class="btn btn-primary float-right" id="letter">
-              Letter <span class="badge badge-light">{{.Letter}}</span>
-              <span class="sr-only">unread messages</span>
-            </button>
-      </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <form>
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Your answer" aria-label="answer" aria-describedby="basic-addon2">
-                    <div class="input-group-append">
-                        <button type="button" class="btn btn-primary">Submit</button>
-                    </div>
-                  </div>
-              </form>
-        </div>
-      </div>
-  </div>
+
   
   
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -43,3 +20,4 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
+{{end}}
