--- a/game.html
+++ b/game.html
@@ -15,11 +15,11 @@
   </div>
   <div class="row">
       <div class="col">
-          <form>
+          <form action="/game" method="post">
               <div class="input-group mb-3">
-                  <input type="text" class="form-control" placeholder="Your answer" aria-label="answer" aria-describedby="basic-addon2">
+                  <input type="text" class="form-control" placeholder="Your answer" aria-label="answer" aria-describedby="basic-addon2" name="answer">
                   <div class="input-group-append">
-                      <button type="button" class="btn btn-primary">Submit</button>
+                      <button type="button" class="btn btn-primary" input type="submit">Submit</button>
                   </div>
                 </div>
             </form>
