Reload if the movie exists

--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
               <div class="input-group mb-3">
                   <input type="text" class="form-control" placeholder="Your answer" aria-label="answer" aria-describedby="basic-addon2" name="answer">
                   <div class="input-group-append">
-                      <button type="button" class="btn btn-primary" input type="submit">Submit</button>
+                      <button type="submit" class="btn btn-primary" input type="submit">Submit</button>
                   </div>
                 </div>
             </form>
