Implementing a counter - WIP

--- a/category.html
+++ b/category.html
@@ -2,14 +2,6 @@
 
 {{template "layout"}}
 
-<script>
-  $(document).ready(function(){
-    $("a.list-group-item.list-group-item-action").click(function(){
-        $("a.list-group-item.list-group-item-action").toggleClass("active disabled");
-    });
-});
-</script>
-
 <div class="container">
   <div class="row">
     <div class="col">
@@ -18,14 +10,27 @@
   </div>
   <div class="row">
     <div class="col-sm-6">
-      <ul>{{range .Categories}}
-        <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action">{{.}}</a>
-        </div>
-        {{end}}
-      </ul>
+      <form>
+          <ul>{{range .Categories}}
+              <div class="checkbox">
+                  <label><input type="checkbox"> {{.}} </label>
+              </div>
+              {{end}}
+            </ul>
+            <ul>
+                <button type="button" class="btn btn-primary" input type="submit">Submit</button>
+            </ul>
+      </form>
     </div>
   </div>
 </div>
 
 {{end}}
+
+<script>
+  const input = $("form ul input:checkbox")
+
+  $( "form" ).submit(function( event ) {
+    event.preventDefault();
+  })
+</script>
