--- a/game.html
+++ b/game.html
@@ -25,6 +25,13 @@
             </form>
       </div>
     </div>
+    <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+            <div class="score">
+                <p class="score-p">This is your current score</p>
+                <p class="counter-count">0</p>
+            </div>
+    </div>
 </div>
 
 {{end}}
